--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <div class="paraTitle">Om</div>
         <div class="bodyText">
             Hemsidan för dig som vill testa dina kunskaper! Du kan själv välja vilka kategorier du
-            vill spela. Om du har några frågor eller synpunkt är du välkommen att höra av dig till: emil.liljemark@elev.ntig.se
+            vill spela. Om du har några frågor eller synpunkter är du välkommen att höra av dig till: emil.liljemark@elev.ntig.se
         </div>
         <div class="paraTitle">Credits</div>
         <div class="bodyText">
