Fixade check all

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Välj kategorier...
     </div>
     <div class="bodyText alignedBodyText">
-        <input type="checkbox" class="checkBox" onclick="checkAll()">
+        <input type="checkbox" class="checkBox" id="all" onclick="checkAll()">
         Välj alla
     </div>
 
